argocd/powerdns/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdns-admin
  namespace: powerdns
  labels:
    app: powerdns-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: powerdns-admin
  template:
    metadata:
      labels:
        app: powerdns-admin
    spec:
      containers:
      - name: powerdns-admin
        image: pschiffe/pdns-admin
      volumes:
      - name: powerdns-admin-data
        persistentVolumeClaim:
          claimName: powerdns-admin-pvc
