argocd/powerdns/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdns-admin-static
  namespace: powerdns
  labels:
    app: powerdns-admin-static
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: powerdns-admin
